--- a/.homelab-template.yaml
+++ b/.homelab-template.yaml
@@ -12,7 +12,7 @@ pvc: true
 pvcAccessMode: ReadWriteOnce
 pvcName: vault-warden
 pvcSize: 15Gi
-pvcStorageClass: nfs-crticial
+pvcStorageClass: nfs-critical
 reloader: true
 resources:
 - configmaps.yaml
