ci: onboarding files from homelab-template
bringing common files in template up to date
template: homelab-template
branch: main
commit: c537355638b85a25559345b505894f74e09c3b48

this commit was generated by [🤖 templatron](https://github.com/charlesthomas/templatron)

--- a/.homelab-template.yaml
+++ b/.homelab-template.yaml
@@ -1,11 +1,16 @@
-_commit: v1.5.1-1-g750747b
+_commit: v1.6.2-1-gb3e20ee
 _src_path: /home/crthomas/code/charlesthomas/homelab-template
 additionalResources: ''
 backups: false
 helm: false
+homepageDescription: Password Manager
+homepageEnabled: true
+homepageGroup: Tools
+homepageIcon: vaultwarden
+homepageName: Vault Warden
 ingSecret: ''
 ingress: false
-labels: |
+labels: |-
   app.kubernetes.io/component: vault-warden
   app.kubernetes.io/name: vault-warden
 name: vault-warden
