--- a/resources/ingresses.yaml
+++ b/resources/ingresses.yaml
@@ -30,7 +30,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
     nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
 spec:
-  ingressClassName: "nginx-crt-house"
+  ingressClassName: "nginx-internal"
   tls:
     - hosts:
         - "vault.crt.house"
