--- a/.homelab-template.yaml
+++ b/.homelab-template.yaml
@@ -1,14 +1,12 @@
-_commit: v1.6.2-1-gb3e20ee
+_commit: v1.6.18-4-gf354859
 _src_path: /home/crthomas/code/charlesthomas/homelab-template
 additionalResources: ''
 backups: false
 helm: false
 homepageDescription: Password Manager
-homepageEnabled: true
 homepageGroup: Tools
 homepageIcon: vaultwarden
 homepageName: Vault Warden
-ingSecret: ''
 ingress: false
 labels: |-
   app.kubernetes.io/component: vault-warden
