--- a/.homelab-template.yaml
+++ b/.homelab-template.yaml
@@ -1,14 +1,11 @@
-_commit: v1.6.2-1-gb3e20ee
+_commit: v1.8.1
 _src_path: /home/crthomas/code/charlesthomas/homelab-template
 additionalResources: ''
 backups: false
 helm: false
-homepageDescription: Password Manager
 homepageEnabled: true
-homepageGroup: Tools
-homepageIcon: vaultwarden
-homepageName: Vault Warden
-ingSecret: ''
+ingHost: vault-warden.crt.house
+ingName: vault-warden
 ingress: false
 labels: |-
   app.kubernetes.io/component: vault-warden
