ci: updating files from homelab-template
bringing common files in template up to date
template: homelab-template
branch: main
commit: da2eca811fda60e54581ec695d205f595170c9e8

this commit was generated by [🤖 templatron](https://github.com/charlesthomas/templatron)

--- a/.homelab-template.yaml
+++ b/.homelab-template.yaml
@@ -1,4 +1,4 @@
-_commit: v1.6.2-1-gb3e20ee
+_commit: v1.8.2
 _src_path: /home/crthomas/code/charlesthomas/homelab-template
 additionalResources: ''
 backups: false
@@ -8,7 +8,8 @@ homepageEnabled: true
 homepageGroup: Tools
 homepageIcon: vaultwarden
 homepageName: Vault Warden
-ingSecret: ''
+ingHost: vault.crt.house
+ingName: vault-warden
 ingress: false
 labels: |-
   app.kubernetes.io/component: vault-warden
