ci: updating files from homelab-template
bringing common files in template up to date
template: homelab-template
branch: main
commit: 52985a434875ca4eecb7097b9cb4c828c6c420c2

this commit was generated by [🤖 templatron](https://github.com/charlesthomas/templatron)

--- a/resources/pvcs.yaml
+++ b/resources/pvcs.yaml
@@ -4,6 +4,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: vault-warden
   namespace: vault-warden
+  labels:
 spec:
   accessModes:
   - ReadWriteOnce
