--- a/resources/pvcs.yaml
+++ b/resources/pvcs.yaml
@@ -4,6 +4,9 @@ kind: PersistentVolumeClaim
 metadata:
   name: vault-warden
   namespace: vault-warden
+  labels:
+    
+    
 spec:
   accessModes:
   - ReadWriteOnce
