--- a/resources/deployments.yaml
+++ b/resources/deployments.yaml
@@ -25,7 +25,7 @@ spec:
           persistentVolumeClaim:
             claimName: vault-warden
       containers:
-        - image: docker.io/vaultwarden/server:1.30.1-alpine
+        - image: ghcr.io/dani-garcia/vaultwarden:1.32.1-alpine
           imagePullPolicy: IfNotPresent
           name: vault-warden
           envFrom:
