--- a/resources/deployments.yaml
+++ b/resources/deployments.yaml
@@ -25,7 +25,7 @@ spec:
           persistentVolumeClaim:
             claimName: vault-warden
       containers:
-        - image: ghcr.io/dani-garcia/vaultwarden:1.32.0-alpine
+        - image: vaultwarden/server:1.32.5
           imagePullPolicy: IfNotPresent
           name: vault-warden
           envFrom:
