--- a/resources/pvcs.yaml
+++ b/resources/pvcs.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: vault-warden
 spec:
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 15Gi
